# niebla

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_publish.yml
niebla/: LICENSE  pyproject.toml
niebla/notebooks/: ebl_inputs.ipynb
niebla/src/niebla/: dust_absorption_models.py  sfr_models.py
niebla/tests/: test_dust_abs.py  test_ebl_class.py
notebooks/: ebl_inputs.ipynb  ebl_outputs.ipynb  input_example.yml
notebooks/dustreemtest/: 0.02
notebooks/minimal_example/ssp_minimal/: 0.02
scripts/: ebl_from_input_file.py
src/niebla/: __init__.py  dust_absorption_models.py  dust_reemission_models.py  ebl_model.py  measurements.py  metall_models.py  safe_log10.py
src/niebla/data/measurements/: emissivities_finke22.txt
src/niebla/data/measurements/ebl_intensity/all_freq/: CB_complete.txt
src/niebla/data/measurements/ebl_intensity/optical_data_2023/CIB/: altieri1999.ecsv  bethermin2012.ecsv  clements1999.ecsv  driver2016.ecsv  finkbeiner2000.ecsv  fujimoto2016.ecsv  hopwood2010.ecsv  hsu2016.ecsv  juvela2009.ecsv  marsden2009.ecsv  matsuura2011.ecsv  odegard2007.ecsv  odegard2019.ecsv  (+1 more)
src/niebla/data/measurements/sfr/: Bourne2017.txt  Driver_SFR.txt  MadauDickinson_irdata.txt  MadauDickinson_uvdata.txt
src/niebla/data/ssp_synthetic_spectra/bosa/: Z.fits
src/niebla/data/ssp_synthetic_spectra/chary2001/: chary_elbaz.fits
src/niebla/measurements_folder/: ebl.py  emissivity.py  metallicity.py  sfr.py
tests/: test_dust_abs.py  test_ebl_class.py  test_metall.py  test_sfr.py
(+26 files in other folders)
