[project]
name = "niebla"
version = "0.0.12"
authors = [
  { name="Sara Porras Bedmar", email="saraporrasbedmar@gmail.com" },
]
description = "Python package to compute the EBL with a forward folding approach."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dynamic = ["dependencies", "keywords"]

[project.urls]
Homepage = "https://github.com/saraporrasbedmar/niebla"
Issues = "https://github.com/saraporrasbedmar/niebla/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

