[project]
name = "niebla"
version = "0.0.1"
authors = [
  { name="Sara Porras Bedmar", email="saraporrasbedmar@gmail.com" },
]
description = "Python package to compute the EBL with a forward folding approach."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
